[package]
name = "qrscan"
description = "Scan a QR code in the terminal using the system camera or a given image"
version = "0.1.7"
edition = "2021"
authors = ['Arijit Basu <hi@arijitbasu.in>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/sayanarijit/qrscan'
homepage = 'https://github.com/sayanarijit/qrscan'
keywords = ['qrcode', 'qr', 'scan', 'reader', 'scanner']
categories = ['command-line-interface', 'command-line-utilities']

[dependencies]
qrcode = { git = "https://github.com/sayanarijit/qrcode-rust", default-features = false, features = [ "svg", "image" ] }
image = "0.24.5"
rqrr = "0.6.0"
clap = { version = "4.1.4", features = ["derive"] }
anyhow = "1.0.68"
csscolorparser = "0.6.2"
viuer = "0.6.2"
nokhwa = { version = "0.10.3", features = ["input-native"] }


[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dev-dependencies]
assert_cmd = "2.0.8"

# https://github.com/kennytm/qrcode-rust/pull/54
[patch.crates-io]
