[package]
name = "qrscan"
description = "Scan a QR code in the terminal using the system camera or a given image"
version = "0.1.9"
edition = "2021"
authors = ['Arijit Basu <hi@arijitbasu.in>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/sayanarijit/qrscan'
homepage = 'https://github.com/sayanarijit/qrscan'
keywords = ['qrcode', 'qr', 'scan', 'reader', 'scanner']
categories = ['command-line-interface', 'command-line-utilities']

[dependencies]
qrencode = "0.14.0"
image = "0.24.6"
rqrr = "0.6.0"
clap = { version = "4.3.9", features = ["derive"] }
anyhow = "1.0.71"
csscolorparser = "0.6.2"
viuer = "0.6.2"
nokhwa = { version = "0.10.4", features = ["input-native"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dev-dependencies]
assert_cmd = "2.0.11"
